--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Ashwin Kumar C",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.19.2",
     "validator": "^13.15.20"
